@@ -96,10 +96,11 @@ file.
             *typedef* |
             *exception*]
 
-    *class* ::= **class** *name* [**:** [**public**]  *super-classes*]
-            [*class-annotations*] **{** {*class-line*} **};**
+    *class* ::= **class** *name* [**:** *super-classes*] [*class-annotations*]
+            **{** {*class-line*} **};**
 
-    *super-classes* ::= *name* [**,** *super-classes*]
+    *super-classes* ::= [**public** | **protected** | **private**] *name*
+            [**,** *super-classes*]
 
     *class-line* ::= [
             *class-statement* |
